# Masters-Final-Project-Skin-Disease-Symptoms-AI-Chatbot

./: .envEXAMPLE  .gitignore  Dockerfile  README.adoc  combined_data.csv  demo.py  envexample.txt  pyproject.toml
.hypothesis/tmp/: tmpbf66uwmn
data/: example.py
project_code/: Skin Image Classification Explainability using Grad-CAM.ipynb  __init__.py  app.py  settings.py
project_code/api/: endpoints.py  uploader.py
project_code/create_database/: uploader.py
project_code/eda/: HAM10000_EDA_ver1.0.0.ipynb  HAM10000_profiling_report.html  eda_ham10000.py  fitzpatrick17k_EDA_ver1.0.0.ipynb  fitzpatrick_profiling_report.html  main.py  pandas_profiling_report.html  symptom_analysis_dataset_EDA_ver1.0.0.ipynb  symptoms_data_profiling_report.html
project_code/evaluation/CNN models/: CNN Ham10000 classifier.py  Phase 2_Models Testing_DDI_dataset_weights.ipynb  Phase 3_Models Testing_Combined_dataset.ipynb  Phase 3_Models_Testing_Combined_data_weights.ipynb  Phase 4_Models_Testing_Combined_data.ipynb
project_code/ingestion/: fitzpatrick_data_ingestion.py  ingestion.py
project_code/models/cnn/: DDI_dataset.ipynb  ham10000classifier.py
project_code/models/llm-chatbot/: chatbot_model.h5
project_code/models/naives-bayes/: words.pkl
project_code/models/symptoms-chatbot/: Augmentation_Chatbot Data.ipynb  Mispelled_Symptoms.xlsx  Symptoms_with_Synonyms.xlsx  Updated_Symptoms_with_Synonyms.xlsx  app.py  augmented_intents.json  chatbot.py  chatbot_model.h5  chatbot_non_symptoms.py  chatbot_seq_bow.h5  classes.pkl  intents.json  st-app.py  st-demo.py  symptom_Description.csv  symptoms.csv  symptoms.ipynb  symptoms.py  symptoms.xlsx  training.py  training_seq_bow.ipynb  training_seq_bow.py  training_seq_emb.ipynb  training_seq_emb.py  training_transf_emb.py  words.pkl
project_code/models/symptoms-chatbot/.ipynb_checkpoints/: symptoms-checkpoint.ipynb
project_code/models/symptoms-chatbot/chatbot_transf_emb.h5/: config.json
project_code/preprocessing/: ham10000_preprocessing_ver1.0.0.py
project_code/processing/: pre_processing.py  processing_one.py
streamlit_app/: Demo.py  demo.py  symptoms.py
streamlit_app/pages/: Dashboard.py  dashboard.py
